<resources>
    <string name="app_name">mPOS</string>
    <string name="add">ADD</string>
    <string name="lang_en">English</string>
    <string name="action_settings">Settings</string>
    <string name="total">Total</string>
    <string name="barcode">Barcode</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="edit">Edit</string>
    <string name="confirm">Done</string>
    <string name="date">Date</string>
    <string name="date_added">Date Added</string>
    <string name="quantity">Barcode</string>
    <string name="remove">Remove</string>
    <string name="scan">Scan</string>
    <string name="unit_price">Unit Price</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="cash">Cash</string>
    <string name="change">Change</string>
    <string name="hint_search">Enter name or barcode</string>
    <string name="hint_cash">Enter cash here</string>
    <string name="add_new_product">Add Product</string>
    <string name="add_stock">Add A Product Lot</string>
    <string name="previous">&lt;</string>
    <string name="next">></string>
    <string name="inventory">Inventory</string>
    <string name="sale">Sale</string>
    <string name="payment">Payment</string>
    <string name="search">Search</string>
    <string name="card_number">Card Number </string>
    <string name="Expiry">Expiry date </string>
    <string name="CVV">CVV         </string>
    <string name="process">Process</string>
    <string name="card_holder">Card Holder </string>
    <string name="mobileNum">Mobile Number </string>
    <string name="idmobile">Payment Id</string>
    <string name="mobilePaymentId">Mobile Payment Id</string>
    <string name="pinNum">Pin number</string>

    <string name="dialog_quit">Are you sure you want to QUIT?</string>
    <string name="dialog_remove_product">Are you sure you want to REMOVE this product?</string>
    <string name="dialog_clear_sale">Are you sure you want to CLEAR this sale?</string>
    <string name="hint_empty_sale">Sale is empty.</string>
    <string name="quit">Quit</string>
    <string name="Scync">Sync</string>
    <string name="no">No</string>
    <string name="product_detail">Product Detail</string>
    <string name="stock">Stock</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="please_input_all">Please fulfill all data.</string>
    <string name="need_money">Need</string>
    <string name="card">cardNumber</string>
    <string name="hint_lang">Please restart the application to apply this language settings.</string>
    <string name="swipe_card">Swipe card payment</string>
    <string name="chip_card">Chip card payment</string>
    <string name="NFC">NFC payment</string>
    <string name="mobile_payment">Mobile payment</string>
    <string name="device_detail">Device status</string>
    <string name="NFC_reader">NFC reader</string>
    <string name="swip_card_reader">swipe card</string>
    <string name="chip_card_reader">chip card reader</string>
    <string name="barcode_reader">Barcode reader</string>
    <string name="LogIn">Log In</string>
    <string name="environment_de">Environment</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="discoverable">Discoverable</string>
    <string name="connect">Connect</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>


    <string-array name="period">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

</resources>
