<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/backi">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/mobile"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_black"
            android:textAlignment="center"
            android:text="@string/mobile_payment"
            android:layout_weight="1.05" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/enable"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_red"
            android:text="@string/enable"/>

        <Button
            android:id="@+id/discover"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_green"
            android:text="@string/discoverable" />
        <Button
            android:id="@+id/connect"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_purple"
            android:text="@string/connect" />
    </LinearLayout>
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/enable"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_red"
            android:onClick="enable"
            android:text="@string/enable" />

        <Button
            android:id="@+id/disable"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_purple"
            android:onClick="disable"
            android:text="@string/disable" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/discover"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_red"
            android:onClick="discoverable"
            android:text="@string/discoverable" />

        <Button
            android:id="@+id/connect"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_purple"
            android:onClick="connect"
            android:text="@string/connect" />
    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/card_enumbr"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_blue"
            android:text="@string/card_number" />

        <EditText
            android:id="@+id/Card_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/card_number"
            android:editable="false"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/expiry"
            style="@style/ButtonText"
            android:layout_width="141dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_blue"
            android:text="@string/Expiry" />

        <EditText
            android:id="@+id/expiry_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/Expiry"
            android:editable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/CVV"
            style="@style/ButtonText"
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_blue"
            android:text="@string/CVV" />

        <EditText
            android:id="@+id/CVV_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/CVV" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/card_holder"
            style="@style/ButtonText"
            android:layout_width="145dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_blue"
            android:text="@string/card_holder" />

        <EditText
            android:id="@+id/card_holder_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/card_holder"
            android:editable="false"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/amount"
            style="@style/ButtonText"
            android:layout_width="143dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_blue"
            android:text="Amount" />

        <EditText
            android:id="@+id/amount_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="amount"
            android:inputType="numberDecimal"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/processPayment"
            style="@style/ButtonText"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_green"
            android:ems="10"
            android:text="@string/process" />

        <Button
            android:id="@+id/send"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_green"
            android:ems="10"
            android:text="send bill" />

</LinearLayout>

</LinearLayout>