<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="211dp"
        android:src="@drawable/device1"
        android:gravity="center"
        android:layout_weight="4.50" />

    <Button
        android:id="@+id/btnChangeImage"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9.17"
        android:background="@drawable/btn_blue"
        android:text="@string/barcode_reader" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="1">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="207dp"
        android:src="@drawable/device2"
        android:gravity="center"
        android:layout_weight="1.50" />

            <Button
                android:id="@+id/btnChangeImage2"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/btn_blue"
                android:text="@string/swip_card_reader"
                android:layout_weight="2.17" />
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="189dp"
        android:src="@drawable/device4"
        android:gravity="center"/>

            <Button
                android:id="@+id/btnChangeImage3"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/btn_blue"
                android:text="@string/NFC_reader"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="191dp"
                android:src="@drawable/device3"
                android:gravity="center" />

            <Button
                 android:id="@+id/btnChangeImage4"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                android:background="@drawable/btn_blue"
                android:text="@string/chip_card_reader"
                android:layout_weight="2.42" />
        </LinearLayout>

   </LinearLayout>


</LinearLayout>
